bonus 1(wave) bonus 2(hover)

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     </p>
                 </article>
         </div>
+        <!-- wave -->
         <img src="img/wave.svg" alt="separatore">
         <section class="sfondo">
             <div class="container body-pag">
@@ -85,6 +86,7 @@
     
             </div>
         </section>
+        <!-- wave -->
         <img id="ruota" src="img/wave.svg" alt="separatore">
         <div class="container body-pag">
     
@@ -99,6 +101,7 @@
                     </p>
                 </article>
         </div>
+        <!-- wave -->
         <img src="img/wave.svg" alt="separatore">
         <section class="sfondo">
             <div class="end-container body-pag">
