--- a/bonus.html
+++ b/bonus.html
@@ -23,11 +23,11 @@
             </div>
             <div id="menu">
                 <ul>
-                    <li>Scarica</li>
-                    <li>Perchè Discord</li>
-                    <li>Nitro</li>
-                    <li>Sicurezza</li>
-                    <li>Assistenza</li>
+                    <li><a href="#">Scarica </a></li>
+                    <li><a href="#">Perchè Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
                 </ul>
             </div>
             <div id="login">
